<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="120dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:ems="10"
        android:maxLength="30"
        android:hint="@string/email_address"
        android:textColor="#fafafa"
        android:textColorHint="#BDBDBD"
        android:inputType="textPersonName"
        android:textSize="16sp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:layout_marginBottom="35dp"
        android:layout_above="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="#11000000"
        android:ems="10"
        android:textColor="#fafafa"
        android:textColorHint="#BDBDBD"
        android:hint="@string/enter_password"
        android:drawableStart="@drawable/ic_action_pass_24dp"
        android:inputType="textPassword"
        android:layout_marginBottom="24dp"
        android:layout_alignBottom="@+id/forgot_password"
        android:layout_alignStart="@+id/editText"
        android:autofillHints="" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_above="@id/cardView"
        android:layout_marginBottom="100dp"
        android:textColor="#BDBDBD"
        android:layout_alignEnd="@+id/editText"/>



    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp"
        android:clickable="true"
        android:id="@+id/cardView"
        android:layout_marginBottom="31dp"
        android:layout_above="@+id/register"
        android:layout_centerHorizontal="true"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="#fff"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_Me"
        android:textColor="#BDBDBD"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView"
        android:id="@+id/linearLayout"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/twitter"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/instagram"
            android:contentDescription="@string/todo" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/facebook"
            android:contentDescription="@string/todo" />
    </LinearLayout>

</RelativeLayout>
